--- a/client/src/global.scss
+++ b/client/src/global.scss
@@ -14,15 +14,12 @@ body {
   font-size: calc(20% + 1.5vmin);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  width: 100%;
 }
 
-.app {
-  border: 2px solid red;
+#app {
   width: 100vw;
-  height: calc((1154 / 2477 * 100vw));
+  height: 100vh;
   overflow: hidden;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  font-size: 1vw;
 }
