--- a/client/src/global.scss
+++ b/client/src/global.scss
@@ -11,15 +11,16 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  font-size: calc(20% + 1.5vmin);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
-  width: 100%;
+  background-color: #207ca5;
 }
 
 #app {
   width: 100vw;
-  height: 100vh;
-  overflow: hidden;
+  height: calc((1339 / 2447) * 100vw);
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
