--- a/client/src/components/Tanks.scss
+++ b/client/src/components/Tanks.scss
@@ -4,31 +4,53 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+  border: 2px solid red;
 }
 
 .big-tank-container {
-  flex: 2.5;
   position: relative;
 }
 
 .big-tank {
   background-color: rgba(200, 200, 200, 0.3);
-  width: 80%;
-  height: 90%;
+  width: 60vw;
+  height: 32vw;
   position: absolute;
-  left: 0;
+  left: 50%;
+  transform: translateX(-50%);
   top: 2vw;
 }
 
 .small-tank-container {
-  width: 100%;
-  flex: 1;
+  width: 60vw;
+  height: 18vw;
+  position: absolute;
+  bottom: 1vw;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
-  padding: 1vw 0;
   gap: 1vw;
 }
 
 .tank {
-  background-color: rgba(200, 200, 200, 0.3);
   flex: 1;
+  background-color: rgba(200, 200, 200, 0.3);
+  transition: all .7s;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
