--- a/client/src/components/Tanks.scss
+++ b/client/src/components/Tanks.scss
@@ -28,11 +28,12 @@
   background-color: rgba(200, 200, 200, 0.2);
   transition: all .6s ease-in-out;
   position: relative;
+  overflow: hidden;
 }
 
 .zoomTrigger {
-  width: 1.5vw;
-  height: 1.5vw;
+  width: 1.25vw;
+  height: 1.25vw;
   border-radius: 50%;
   background-color: #444;
   position: absolute;
@@ -42,9 +43,98 @@
   &:hover { cursor: pointer; }
 }
 
+.shark {
+  width: 10vw;
+  position: absolute;
+  left: 150%;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: left 15s ease-out;
+
+  &:hover { cursor: pointer; }
+}
+
 .tank1ZoomedIn { transform: scale(2.5) translate(50%, -50%); }
 .tank2ZoomedIn { transform: scale(2.5) translateY(-50%); }
 .tank3ZoomedIn { transform: scale(2.5) translate(-50%, -50%); }
+
+.moveSharkLeft {
+  left: -90%;
+}
+
+.moveSharkRight {
+  right: -150%;
+  transform: scaleX(-0.5) scaleY(0.5);
+}
+
+.count {
+  font-size: 1.5vw;
+  color: black;
+  position: absolute;
+  left: 2vw;
+  top: 2vw;
+}
+
+.sharkOptionsBubble {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 0.5vw;
+  font-size: .8vw;
+  border-radius: 0.4vw;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  padding: 1.5vw;
+  gap: 1vw;
+
+  h1 {
+    font-size: 1.8vw;
+    font-weight: 500;
+    color: #000000;
+  }
+}
+
+.sharkOptionSelect {
+  text-align: center;
+  width: 14vw;
+  padding: .5vw 0;
+  border-radius: .3vw;
+  border: 1px solid #d2d2d2;
+
+  &:hover {
+    background-color: rgba(190, 190, 190, 0.1);
+    cursor: pointer;
+  }
+}
+
+.button {
+  background-color: #2e2e2e;
+  border: none;
+  color: white;
+  padding: 0.3vw 0.4vw;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1vw;
+  border-radius: 0.5vw;
+  margin: 0 0.5vw;
+  height: fit-content;
+  min-height: auto;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+
+
+
+
+
+
 
 
 
